--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+PIL==1.1.7
 RPi.GPIO==0.5.11
 argparse==1.2.1
 mcpi==0.1.1
@@ -7,4 +8,6 @@ pifacecommon==4.1.2
 pifacedigitalio==3.0.4
 pygobject==3.8.2
 pyserial>=2.6
+qrtools==1.2
+wifi==0.3.4
 wsgiref==0.1.2
