--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-PIL==1.1.7
-RPi.GPIO==0.5.11
-argparse==1.2.1
-mcpi==0.1.1
-numpy==1.6.2
-picamera==1.10
-pifacecommon==4.1.2
-pifacedigitalio==3.0.4
-pygobject==3.8.2
-pyserial>=2.6
-qrtools==1.2
-wifi==0.3.4
-wsgiref==0.1.2
+Flask==0.10.1
+Flask-SocketIO==0.6.0
+gevent==1.0.2
+gevent-socketio==0.3.6
+gevent-websocket==0.9.5
+greenlet==0.4.9
+itsdangerous==0.24
+Jinja2==2.8
+MarkupSafe==0.23
+Werkzeug==0.10.4
+wheel==0.24.0
