--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ gevent==1.0.2
 gevent-socketio==0.3.6
 gevent-websocket==0.9.5
 greenlet==0.4.9
+gunicorn==18.0
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
