Restored sumopy as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sumocharge/sumoproxy"]
 	path = sumocharge/sumoproxy
 	url = git@github.com:thisismyrobot/sumo-proxy.git
+[submodule "sumocharge/sumopy"]
+	path = sumocharge/sumopy
+	url = git@github.com:thisismyrobot/sumo-py.git
